Finally at least got something to work